<resources>
    <string name="app_name">comm</string>
    <string name="drone">drone</string>
    <string name="sound">Sound</string>
    <string name="vr">vr</string>
    <string name="mcbook">mcbook</string>
    <string name="ver_carrito">Ver Carrito</string>
    <string name="listar">listar</string>
    <string name="textview">TextView</string>
    <string name="detalles_del_producto">Detalles del Producto</string>
    <string name="codigo_del_producto">Código del Producto</string>
    <string name="descripcion_del_producto">Descripcion del Producto</string>
    <string name="precio_del_producto">Precio del Producto</string>
    <string name="actualizar_producto">Actualizar Producto</string>
    <string name="Codigo">Código:</string>
    <string name="Descripcion">Descripción:</string>
    <string name="Precio">Precio:</string>
    <string name="Cantidad">Cantidad:</string>
    <string name="carrito_description" />
    <string name="carrito_title" />
    <string name="pagar_button" />
    <string name="total_label" />
    <string name="btnPagar" />
    <string name="codigo_label" />
    <string name="descripcion_label" />
    <string name="precio_label" />
    <string name="codigo_p001">Código: P001</string>
    <string name="descripcion_producto">Descripción: Producto</string>
    <string name="precio_199_99">Precio: $199.99</string>
    <string name="Agregar_al_carrito">Agregar al Carrito</string>
    <string name="pagar">Pagar</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="formulario_de_producto">Formulario de Producto</string>
    <string name="agregar_al_carrito">Agregar al Carrito</string>
    <string name="codigo">Código</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="c_digo">Código</string>
    <string name="descripci_n">Descripción</string>
    <string name="Preci0">Precio</string>
</resources>